--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Jessi-whatsapp-bot-md",
+  "name": "𝚀𝚄𝙴𝙴𝙽 𝙰𝚂𝙷𝙸 𝙱𝙾𝚃",
   "description": "whatsapp md bot build with nodejs",
   "repository": "https://github.com/whiteshadowofficial/Jessi-whatsapp-bot-md2",
   "logo": "https://telegra.ph/file/57e0679dc28177770f449.jpg",
